# weekend-tracer-rs

./: Cargo.toml  README.md
src/: aabb.rs  bvh.rs  camera.rs  lib.rs  onb.rs  ray.rs  renderer.rs  scenes.rs  util.rs  vec3.rs
src/hittable/: aa_rect.rs  block.rs  constant_medium.rs  flip_face.rs  mod.rs  moving_sphere.rs  rotate.rs  sphere.rs  translate.rs  world.rs  xy_rect.rs
src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/pdf/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs
src/texture/: checkerboard.rs  constant.rs  image.rs  marble.rs  mod.rs  perlin.rs
