[package]
name = "weekend-tracer-rs"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.16"
clap = "2.33"
indicatif = {version = "0.14.0", features = ["with_rayon"]}
rayon = "1.3"
