[package]
name = "weekend-tracer-rs"
version = "1.0.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { version = "0.16", optional = true }
clap = "2.33"
indicatif = {version = "0.14.0", features = ["with_rayon"]}
rayon = "1.3"
rand = "0.7.3"
image = "0.23.4"
lazy_static = "1.4"

[dev-dependencies]
# For a reproducible RNG:
rand_chacha = "0.2.2"

[features]
default = ["gui-support"]
gui-support = ["minifb"]

[profile.release]
lto = "fat"
codegen-units = 1
